tests/snapshot/inputs/errors/record_type_repeated_field.ncl
# capture = 'stderr'
# command = []
({foo.bar.baz = "a"} : {foo : String, foo : Number})